--- a/index.html
+++ b/index.html
@@ -3,11 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Converter</title>
+    <title>Unitverse</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to the Converter Project</h1>
+    <header>
+        <h1>Unitverse</h1>
+        <nav>
+            <ul>
+                <li><a href="#cbm-calculator">Package CBM Calculator</a></li>
+                <li><a href="#length-converter">Length Converter</a></li>
+                <li><a href="#mass-converter">Mass Converter</a></li>
+                <li><a href="#currency-converter">Currency Converter</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="cbm-calculator">
+            <h2>Package CBM Calculator</h2>
+            <!-- CBM calculator content will go here -->
+        </section>
+        <section id="length-converter">
+            <h2>Length Converter</h2>
+            <!-- Length converter content will go here -->
+        </section>
+        <section id="mass-converter">
+            <h2>Mass Converter</h2>
+            <!-- Mass converter content will go here -->
+        </section>
+        <section id="currency-converter">
+            <h2>Currency Converter</h2>
+            <!-- Currency converter content will go here -->
+        </section>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
