Allow decimal values in CBM calculator

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="form-grid">
                     <div>
                         <label for="cbm-length">Length:</label>
-                        <input type="number" id="cbm-length" placeholder="e.g., 10">
+                        <input type="number" id="cbm-length" placeholder="e.g., 10" step="any">
                         <select id="cbm-length-unit">
                             <option value="cm">cm</option>
                             <option value="m">m</option>
@@ -42,7 +42,7 @@
                     </div>
                     <div>
                         <label for="cbm-width">Width:</label>
-                        <input type="number" id="cbm-width" placeholder="e.g., 10">
+                        <input type="number" id="cbm-width" placeholder="e.g., 10" step="any">
                         <select id="cbm-width-unit">
                             <option value="cm">cm</option>
                             <option value="m">m</option>
@@ -51,7 +51,7 @@
                     </div>
                     <div>
                         <label for="cbm-height">Height:</label>
-                        <input type="number" id="cbm-height" placeholder="e.g., 10">
+                        <input type="number" id="cbm-height" placeholder="e.g., 10" step="any">
                         <select id="cbm-height-unit">
                             <option value="cm">cm</option>
                             <option value="m">m</option>
@@ -60,7 +60,7 @@
                     </div>
                     <div>
                         <label for="cbm-weight">Weight:</label>
-                        <input type="number" id="cbm-weight" placeholder="e.g., 1">
+                        <input type="number" id="cbm-weight" placeholder="e.g., 1" step="any">
                         <select id="cbm-weight-unit">
                             <option value="kg">kg</option>
                             <option value="g">g</option>
